force-app/main/default/objects/Customer_Collection__c/Customer_Collection__c.object-meta.xml
<CustomObject>
    <description>Razorpay links and QR payment requests sent by dealers to their customers.</description>
<enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds>
<enableReports>true</enableReports><enableSearch>true</enableSearch>
<enableStreamingApi>true</enableStreamingApi>
    <label>Customer Collection</label>
    <nameField><displayFormat>SF-COL-{000000}</displayFormat><label>Collection Number</label><type>AutoNumber</type></nameField>
    <pluralLabel>Customer Collections</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
</CustomObject>