force-app/main/default/objects/Customer_Collection__c/fields/Created_By_Dealer_User__c.field-meta.xml
<CustomField>
    <fullName>Created_By_Dealer_User__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Created By Dealer User</label>
    <referenceTo>Contact</referenceTo><relationshipLabel>Customer Collections</relationshipLabel>
    <relationshipName>Customer_Collections</relationshipName><required>false</required><type>Lookup</type>
</CustomField>