force-app/main/default/objects/Customer_Collection__c/fields/Customer_Email__c.field-meta.xml
<CustomField>
    <fullName>Customer_Email__c</fullName><label>Customer Email</label><required>false</required><type>Email</type>
</CustomField>