force-app/main/default/objects/Customer_Collection__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName><label>Customer Name</label><length>150</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>