force-app/main/default/objects/Customer_Collection__c/fields/Customer_Phone__c.field-meta.xml
<CustomField>
    <fullName>Customer_Phone__c</fullName><label>Customer Phone</label><required>false</required><type>Phone</type>
</CustomField>