force-app/main/default/objects/Customer_Collection__c/fields/Dealer__c.field-meta.xml
<CustomField>
    <fullName>Dealer__c</fullName><deleteConstraint>SetNull</deleteConstraint><label>Dealer</label>
    <referenceTo>Account</referenceTo><relationshipLabel>Customer Collections</relationshipLabel>
    <relationshipName>Customer_Collections</relationshipName><required>false</required><type>Lookup</type>
</CustomField>