force-app/main/default/objects/Customer_Collection__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName><label>Payment Description</label><required>false</required><type>TextArea</type>
</CustomField>