force-app/main/default/objects/Customer_Collection__c/fields/Expires_At__c.field-meta.xml
<CustomField>
    <fullName>Expires_At__c</fullName><label>Expires At</label><required>false</required><type>DateTime</type>
</CustomField>