force-app/main/default/objects/Customer_Collection__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName><label>Customer Invoice Number</label><length>50</length><required>false</required><type>Text</type><unique>false</unique>
</CustomField>