force-app/main/default/objects/Customer_Collection__c/fields/Payment_Link_URL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Link_URL__c</fullName><label>Payment Link URL</label><required>false</required><type>Url</type>
</CustomField>