force-app/main/default/objects/Customer_Collection__c/fields/Portal_Collection_Id__c.field-meta.xml
<CustomField>
    <fullName>Portal_Collection_Id__c</fullName><externalId>true</externalId><label>Portal Collection ID</label>
    <precision>18</precision><required>false</required><scale>0</scale><type>Number</type><unique>true</unique>
</CustomField>