force-app/main/default/objects/Customer_Collection__c/fields/Razorpay_Payment_Id__c.field-meta.xml
<CustomField>
    <fullName>Razorpay_Payment_Id__c</fullName><externalId>true</externalId><label>Razorpay Payment ID</label>
    <length>100</length><required>false</required><type>Text</type><unique>true</unique>
</CustomField>