force-app/main/default/objects/Customer_Collection__c/fields/Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Reference_Number__c</fullName><externalId>true</externalId><label>Reference Number</label>
    <length>40</length><required>false</required><type>Text</type><unique>true</unique>
</CustomField>