force-app/main/default/objects/Customer_Collection__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName><label>Collection Status</label><required>false</required><type>Picklist</type>
    <valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted>
        <value><fullName>CREATED</fullName><default>true</default><label>Created</label></value>
        <value><fullName>SENT</fullName><default>false</default><label>Sent</label></value>
        <value><fullName>PAID</fullName><default>false</default><label>Paid</label></value>
        <value><fullName>EXPIRED</fullName><default>false</default><label>Expired</label></value>
        <value><fullName>CANCELLED</fullName><default>false</default><label>Cancelled</label></value>
        <value><fullName>FAILED</fullName><default>false</default><label>Failed</label></value>
    </valueSetDefinition></valueSet>
</CustomField>